fixed wrapping issue in containers

--- a/style.css
+++ b/style.css
@@ -772,6 +772,7 @@ section {
     display: flex;
     gap: 1rem;
     margin-top: auto;
+    flex-wrap: wrap;
 }
 
 .btn {
